[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/Automata/Resources/Green_Rectangle.png" type="Texture" id=1]
[ext_resource path="res://addons/Automata/Nodes/StateNode.gd" type="Script" id=2]
[ext_resource path="res://addons/Automata/Resources/Selected_Green_rectangle.png" type="Texture" id=3]
[ext_resource path="res://addons/Automata/Styles/TextBox.tres" type="StyleBox" id=4]
[ext_resource path="res://addons/Automata/Styles/textbox_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://addons/Automata/Styles/subtext_font.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 128.177, 128.286 )
margin_left = 40.0
margin_right = 40.0
margin_top = 40.0
margin_bottom = 40.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 156, 128 )
margin_left = 50.0
margin_right = 56.0
margin_top = 50.0
margin_bottom = 48.0

[node name="StateNode" type="GraphNode"]
margin_right = 150.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/frame = SubResource( 1 )
custom_styles/selectedframe = SubResource( 2 )
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentContainer" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 152.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleContainer" type="VBoxContainer" parent="ContentContainer"]
visible = false
margin_right = 70.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StateNameLabel" type="Label" parent="ContentContainer/TitleContainer"]
margin_right = 70.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "State Node"
align = 1
valign = 1

[node name="PropertiesContainer" type="VBoxContainer" parent="ContentContainer"]
margin_right = 112.0
margin_bottom = 260.0

[node name="state_name_lineedit" type="LineEdit" parent="ContentContainer/PropertiesContainer"]
margin_right = 112.0
margin_bottom = 32.3292
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
placeholder_text = "State Name"

[node name="on_enter_label" type="Label" parent="ContentContainer/PropertiesContainer"]
margin_top = 36.0
margin_right = 112.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.470588, 1 )
text = "on enter method"
valign = 2

[node name="on_enter_lineedit" type="LineEdit" parent="ContentContainer/PropertiesContainer"]
margin_top = 64.0
margin_right = 112.0
margin_bottom = 96.3292
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="on_update_label" type="Label" parent="ContentContainer/PropertiesContainer"]
margin_top = 100.0
margin_right = 112.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.470588, 1 )
text = "on update method"
valign = 2

[node name="on_update_lineedit" type="LineEdit" parent="ContentContainer/PropertiesContainer"]
margin_top = 128.0
margin_right = 112.0
margin_bottom = 160.329
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="on_exit_label" type="Label" parent="ContentContainer/PropertiesContainer"]
margin_top = 164.0
margin_right = 112.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 24 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.462745, 0.462745, 0.470588, 1 )
text = "on exit method"
valign = 2

[node name="on_exit_lineedit" type="LineEdit" parent="ContentContainer/PropertiesContainer"]
margin_top = 192.0
margin_right = 112.0
margin_bottom = 224.329
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )

[node name="close_button" type="Button" parent="ContentContainer/PropertiesContainer"]
margin_top = 228.0
margin_right = 112.0
margin_bottom = 260.329
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.647059, 0.937255, 0.67451, 1 )
custom_colors/font_color_pressed = Color( 0.290196, 0.431373, 0.301961, 1 )
text = "Ã—"
